...
      return accounts?.find((a) => a._id === accountId)?.name;
    },
    [accounts]
  );

  return (
    <View testID="dashboard-screen" className="flex-1 bg-background">
      <ScrollView
        showsVerticalScrollIndicator={false}
        scrollEventThrottle={8}
        decelerationRate="fast"
        removeClippedSubviews
        refreshControl={
...
